Updating to use List.of